apps/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - whoami.atoca.house
    secretName: whoami-tls
  rules:
  - host: whoami.atoca.house
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
